--- a/config/item-service-dev.yml
+++ b/config/item-service-dev.yml
@@ -4,6 +4,11 @@ spring:
   cloud:
     config:
       override-none: true
+    inetutils:
+      ignored-interfaces:
+        - VM.*
+      preferred-networks:
+        - 176.115.9
       
   rabbitmq:
     host: 192.168.64.140
@@ -15,6 +20,9 @@ server:
   port: 8001
  
 eureka:
+  instance:
+    prefer-ip-address: true
+    instance-id: ${spring.cloud.client.ip-address}:${spring.application.name}:${server.port}
   client:
     service-url:
       defaultZone: http://eureka1:2001/eureka,http://eureka2:2002/eureka
