--- a/config/user-service-dev.yml
+++ b/config/user-service-dev.yml
@@ -20,6 +20,9 @@ server:
   port: 8101
 
 eureka:
+  instance:
+    prefer-ip-address: true
+    instance-id: ${spring.cloud.client.ip-address}:${spring.application.name}:${server.port}
   client:
     service-url:
       defaultZone: http://eureka1:2001/eureka,http://eureka2:2002/eureka
